# WASMHive-Runtime

./: .gitignore  Cargo.toml  LICENSE  README.md  run_benchmark.sh
benchmark/: Cargo.toml  README.md
benchmark/src/: main.rs
distribute_macro/: Cargo.toml
distribute_macro/src/: lib.rs
distribute_runtime/: Cargo.toml
distribute_runtime/src/: lib.rs  protocol.rs
docs/: architecture.md  roadmap.md
docs/benchmarks/: README.md  results-2025-11.json  results-2026-07-binary-protocol.json
examples/: Cargo.toml
examples/src/: lib.rs  main.rs  shader.wgsl
examples_bw/: Cargo.toml
examples_bw/src/: main.rs
examples_raytrace/: Cargo.toml
examples_raytrace/src/: lib.rs  main.rs
examples_webcrawl/: Cargo.toml  crawl_these.txt  sample_urls.txt
examples_webcrawl/src/: main.rs
src/: lib.rs
