[package]
name = "distribute_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
webrtc = "0.11"
tokio-tungstenite = "0.21"
url = "2.4"
futures-util = "0.3"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
base64 = "0.21"
