[package]
name = "distributed_examples"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.50"
log = "0.4.27"
console_log = "1.0.0"
futures = "0.3.31"
getrandom = { version = "0.2", features = ["js"] }
wgpu = "25.0.0"
bytemuck = "1"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Only include these for native builds, not WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
distribute_runtime = { path = "../distribute_runtime" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[dependencies.web-sys]
version = "0.3.79"
features = [
  "console",
  "Window",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "GpuAdapter",
  "GpuBuffer",
  "GpuCommandEncoder",
  "GpuComputePassDescriptor",
  "GpuComputePipeline",
  "GpuBindGroup",
  "GpuShaderModule",
  "GpuQueue",
  "GpuBufferDescriptor",
  "GpuBindGroupDescriptor",
  "GpuBindGroupLayoutDescriptor",
  "GpuPipelineLayoutDescriptor",
  "GpuComputePipelineDescriptor",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"