[package]
name = "examples_bw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs"] }
walkdir = "2"
base64 = "0.21"

distribute_runtime = { path = "../distribute_runtime" }
