[package]
name = "examples_raytrace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Only for the native master binary, not the WASM lib shipped to workers
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
distribute_runtime = { path = "../distribute_runtime" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
image = "0.24"
